Add `POST /subscription` and `POST /update` endpoints to the transport layer (#1265)
Co-authored-by: Jorge Sanchez <jorge.sanchez@wazuh.com>